@@ -1,3 +1,9 @@
+2001-09-24  Bruno Haible  <haible@clisp.cons.org>
+
+	* gettext.m4 (AM_WITH_NLS): Capture not only the value of $LINGUAS,
+	but also whether it was set or unset.
+	Reported by Andreas Schwab <schwab@suse.de>.
+
 2001-08-12  Jim Meyering  <meyering@lucent.com>
 
 	* mbrtowc.m4: Quote first arg of AC_DEFUN.
